<resources>
    <string name="app_name">twoactivities</string>
    <string name="button_main">SEND</string>
    <string name="activity2_name">activity2_name</string>
    <string name="text_header">Message Received</string>
    <string name="editText_main">enter data</string>
    <string name="button_second">Reply</string>
    <string name="editText_second">Enter Your Reply Here</string>
    <string name="text_header_reply">Reply Received</string>
</resources>